--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -20,9 +20,32 @@ img {
   height: auto;
 }
 
+*,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 92px;
+}
+
+body {
+  font-family: $main-font;
+  color: $main-color;
+  background-color: $main-background-color;
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+main {
+  a:hover {
+    @extend %dark-cursor;
+  }
+  button:hover {
+    @extend %light-cursor;
+  }
 }
 
 .link {
@@ -35,11 +58,4 @@ img {
 
 .section {
   padding: 60px 0px;
-}
-
-body {
-  font-family: $main-font;
-  color: $main-color;
-  background-color: $main-background-color;
-  font-size: 14px;
 }
